sample/src/objects/Dues__c.object
<CustomObject>
    <description>Track dues of each member</description>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Dues remaining</description>
        <label>Amount Paid</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dues_Remaining__c</fullName>
        <formula>Member_Name__r.Account.Monthly_Dues__c  -  Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dues Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of a member of the society</description>
        <label>Member Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dues</relationshipLabel>
        <relationshipName>Dues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Filter results based on this month</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Filter results based on this year.</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dues</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Member_Name__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Dues_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D - {0000}</displayFormat>
        <label>Dues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>